# rust-auth

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  run.sh
docs/: ldapservice.drawio
example/: Dockerfile  api.py  example_request.py  requirements.txt
ldap/: Dockerfile  setup.ldif  users.ldif
src/: access.rs  auth.rs  auth_request.rs  config.rs  jwt.rs  ldap.rs  ldap_auth.rs  lib.rs  main.rs  permission.rs
src/connectors/: connector.rs  ldap.rs  mod.rs
src/models/: access.rs  auth_request.rs  jwt.rs  mod.rs  permission.rs
src/tests/: mod.rs  test_add.rs  test_login.rs
src/traits/: auth.rs  authenticate.rs  authorize.rs  mod.rs
